--- a/src/locales/en/en-US.json
+++ b/src/locales/en/en-US.json
@@ -28,9 +28,8 @@
   },
   "contact": {
     "title": "Let's chat!",
-    "description": "Whether to discuss an innovative project, answer technical questions, or simply exchange ideas about technology, my inbox is always open.",
-    "messageAnswer": "I personally reply to all messages",
-    "phrase": "Great partnerships begin with a simple hello",
+    "description": "Feel free to reach out if you want to chat about tech, accessibility, performance, or UX - I'm always happy to connect!",
+    "messageAnswer": "Don't worry - you'll always get a personal reply from me!",
     "form": {
       "name": "Name",
       "name-placeholder": "John Cena",
@@ -67,5 +66,10 @@
     "go-home": "Go to home",
     "go-back": "Go back to previous page",
     "error": "Error 404"
+  },
+
+  "home": {
+    "text": "Hello! I'm Samuel Nakazawa and this is my website :)",
+    "button": "Discover My Journey"
   }
 }
