feat(ux): making some ux adjusments

--- a/src/locales/en/en-US.json
+++ b/src/locales/en/en-US.json
@@ -18,7 +18,7 @@
   "footer": {
     "rightsHolder": "Samuel Nakazawa. All rights reserved"
   },
-  "home": {
+  "skill": {
     "skillset": "Professional Skillset",
     "show-more-button": "Show more",
     "show-less-button": "Show less"
