--- a/src/locales/pt/pt-BR.json
+++ b/src/locales/pt/pt-BR.json
@@ -18,7 +18,7 @@
   "footer": {
     "rightsHolder": "Samuel Nakazawa. Todos os direitos reservados"
   },
-  "home": {
+  "skill": {
     "skillset": "Habilidades Profissionais",
     "show-more-button": "Mostrar mais",
     "show-less-button": "Mostrar menos"
