--- a/src/locales/pt/pt-BR.json
+++ b/src/locales/pt/pt-BR.json
@@ -9,12 +9,6 @@
     "menu-open": "Abrir menu",
     "menu-close": "Fechar menu"
   },
-  "hero": {
-    "h1": "Olá",
-    "h2": "Sou",
-    "h3": "Engenheiro Frontend",
-    "carrousel": ["React & Typescript", "Pai de Gato", "Entusiasta de Tecnologia"]
-  },
   "footer": {
     "rightsHolder": "Samuel Nakazawa. Todos os direitos reservados"
   },
@@ -22,9 +16,6 @@
     "skillset": "Habilidades Profissionais",
     "show-more-button": "Mostrar mais",
     "show-less-button": "Mostrar menos"
-  },
-  "resume": {
-    "cv-button": "Baixar meu Currículo"
   },
   "contact": {
     "title": "Bora trocar uma ideia?",
@@ -69,5 +60,108 @@
   "home": {
     "text": "Ola! Sou Samuel Nakazawa e este é meu site :)",
     "button": "Descubra mais sobre mim"
+  },
+  "about": {
+    "hero": {
+      "h1": "Olá! Sou",
+      "im": "Eu sou um ",
+      "span1": "Engenheiro Frontend",
+      "span2": "React, TypeScript, Design Systems e Optimização Web",
+      "text1": "apaixonado por criar experiencias digitais acessíveis e performáticas.",
+      "text2": "Atualmente atuo desenvolvendo produtos e plataformas na",
+      "text3": "Bora falar sobre",
+      "text4": "Fora do trabalho, eu gosto de explorar novas tecnologias, construir coisas, jogar games retrô e cuidar das minhas 5 gatas.",
+      "carrousel": ["React & Typescript", "Sleepyhead", "Cat Person", "Knowledge Seeker"]
+    },
+
+    "experience": {
+      "title": "Experiência Profissional",
+      "items": {
+        "globo": {
+          "role": "Engenheiro de Software",
+          "company": "Globo",
+          "period": "Abril de 2023 – Presente",
+          "description": [
+            "A Globo é a maior empresa de mídia e televisão da América Latina.",
+            {
+              "main": "Durante minha atuação, eu:",
+              "items": [
+                "Desenvolvi interfaces com integração de IA para produção e distribuição de conteúdo",
+                "Construí microsserviços para aplicações em larga escala",
+                {
+                  "text": "Mantive, desenvolvi e disponibilizei sistemas para coberturas de eventos críticos, incluindo:",
+                  "subitems": [
+                    "Eleições municipais brasileiras",
+                    "As Olimpíadas",
+                    "Big Brother Brasil"
+                  ]
+                }
+              ]
+            }
+          ]
+        },
+        "ciandt": {
+          "role": "Engenheiro de Software Pleno",
+          "company": "CI&T",
+          "period": "Julho de 2021 – Março de 2023",
+          "description": [
+            "A CI&T é uma consultoria global com clientes como: Cielo, Google, HP, Itaú, Johnson & Johnson, Motorola e Globo.",
+            {
+              "main": "Durante meu tempo lá, eu:",
+              "items": [
+                {
+                  "text": "Projetei sistemas de automação incluindo:",
+                  "subitems": [
+                    "Processamento de dados com Python",
+                    "Sistema de distribuição de conteúdo para o Globo.com (3º site mais visitado do Brasil)"
+                  ]
+                },
+                {
+                  "text": "Liderei migrações técnicas dos seguintes projetos usando técnicas de web scraping:",
+                  "subitems": ["Site Memória Globo", "Site História Globo"]
+                }
+              ]
+            }
+          ]
+        },
+        "agendaos": {
+          "role": "Desenvolvedor Front-End",
+          "company": "agendaOS",
+          "period": "Novembro de 2019 – Julho de 2021",
+          "description": [
+            "Desenvolvi e mantive a plataforma web agendaOS utilizando React.js e Redux.",
+            "Contribuí para o desenvolvimento inicial do aplicativo mobile com React Native."
+          ]
+        }
+      }
+    },
+    "education": {
+      "role": "Educação",
+      "item": {
+        "institution": "Faculdade de Tecnologia de Bragança Paulista",
+        "period": "2018–2020",
+        "description": [
+          "Tecnologia em Sistemas de Informação",
+          "Foco no desenvolvimento de sistemas e gestão da tecnologia da informação.",
+          "Concluí o curso com louvor em 2020."
+        ]
+      }
+    },
+    "languages": {
+      "title": "Idiomas",
+      "description": ["Idiomas: Inglês (Proficiência Profissional Completa)", "Português (Nativo)"]
+    },
+
+    "card": {
+      "resume": "Curriculo",
+      "click": "Selecione para ver + detalhes",
+      "hover": "Passe o mouse para ver + detalhes"
+    },
+
+    "info": {
+      "h1": "Para mais informações",
+      "chat": "Vamos conversar :)",
+      "cv-button": "Baixe meu currículo"
+    }
   }
 }
